updated git ignore

--- a/compilers-project-1.0/.gitignore
+++ b/compilers-project-1.0/.gitignore
@@ -7,3 +7,29 @@ src/Parser.sml
 src/Parser.ui
 src/Parser.uo
 bin/*
+src/CallGraph.ui
+src/CallGraph.uo
+src/CodeGen.ui
+src/CodeGen.uo
+src/CopyConstPropFold.ui
+src/CopyConstPropFold.uo
+src/DeadBindingRemoval.ui
+src/DeadBindingRemoval.uo
+src/DeadFunctionRemoval.ui
+src/DeadFunctionRemoval.uo
+src/FastoC.ui
+src/FastoC.uo
+src/Inlining.ui
+src/Inlining.uo
+src/Interpreter.ui
+src/Interpreter.uo
+src/Lexer.ui
+src/Lexer.uo
+src/Mips.ui
+src/Mips.uo
+src/RegAlloc.ui
+src/RegAlloc.uo
+src/SymTab.ui
+src/SymTab.uo
+src/TypeChecker.ui
+src/TypeChecker.uo
